--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1199,6 +1199,9 @@
     <ClCompile Include="UVa\10000\10077.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\500\540.cpp">
+      <Filter>UVa\500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
