--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1205,6 +1205,9 @@
     <ClCompile Include="UVa\11700\11716.cpp">
       <Filter>UVa\11700</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10168.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
