--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1214,6 +1214,9 @@
     <ClCompile Include="UVa\500\532.cpp">
       <Filter>UVa\500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\1500\1586.cpp">
+      <Filter>UVa\1500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
