--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1220,6 +1220,9 @@
     <ClCompile Include="UVa\13200\13287.cpp">
       <Filter>UVa\13200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\400\490.cpp">
+      <Filter>UVa\400\490</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
