--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1229,6 +1229,9 @@
     <ClCompile Include="UVa\800\834.cpp">
       <Filter>UVa\800</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10900\10986.cpp">
+      <Filter>UVa\10900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
