--- a/Contest.vcxproj
+++ b/Contest.vcxproj
@@ -828,6 +828,10 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="UVa\11800\11879.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="UVa\11900\11936.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -1394,6 +1398,7 @@
     <None Include="UVa\10100\10183.py" />
     <None Include="UVa\10300\10334.py" />
     <None Include="UVa\10500\10579.py" />
+    <None Include="UVa\11800\11879.py" />
     <None Include="UVa\400\424.py" />
     <None Include="UVa\400\485.py" />
     <None Include="UVa\400\495.py" />
