--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1238,6 +1238,9 @@
     <ClCompile Include="UVa\11900\11934.cpp">
       <Filter>UVa\11900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10400\10473.cpp">
+      <Filter>UVa\10400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
