--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1244,6 +1244,9 @@
     <ClCompile Include="UVa\12500\12502.cpp">
       <Filter>UVa\12500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10006.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
