--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1250,6 +1250,9 @@
     <ClCompile Include="UVa\400\465.cpp">
       <Filter>UVa\400\460</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\600\644.cpp">
+      <Filter>UVa\600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
