--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1253,6 +1253,9 @@
     <ClCompile Include="UVa\600\644.cpp">
       <Filter>UVa\600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10600\10664.cpp">
+      <Filter>UVa\10600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
