--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1256,6 +1256,9 @@
     <ClCompile Include="UVa\10600\10664.cpp">
       <Filter>UVa\10600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11900\11900.cpp">
+      <Filter>UVa\11900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
