--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1259,6 +1259,9 @@
     <ClCompile Include="UVa\11900\11900.cpp">
       <Filter>UVa\11900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10700\10763.cpp">
+      <Filter>UVa\10700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
