--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1262,6 +1262,9 @@
     <ClCompile Include="UVa\10700\10763.cpp">
       <Filter>UVa\10700</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\700\784.cpp">
+      <Filter>UVa\700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
