--- a/Contest.vcxproj
+++ b/Contest.vcxproj
@@ -564,6 +564,10 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="UVa\10400\10494.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="UVa\10400\10499.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -1437,6 +1441,7 @@
     <None Include="UVa\10100\10106.py" />
     <None Include="UVa\10100\10183.py" />
     <None Include="UVa\10300\10334.py" />
+    <None Include="UVa\10400\10494.py" />
     <None Include="UVa\10500\10579.py" />
     <None Include="UVa\11800\11879.py" />
     <None Include="UVa\400\424.py" />
