--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1268,6 +1268,9 @@
     <ClCompile Include="UVa\10400\10494.cpp">
       <Filter>UVa\10400</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10369.cpp">
+      <Filter>UVa\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
