--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1271,6 +1271,9 @@
     <ClCompile Include="UVa\10300\10369.cpp">
       <Filter>UVa\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\133.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
