--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1280,6 +1280,9 @@
     <ClCompile Include="UVa\10000\10026.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11700\11743.cpp">
+      <Filter>UVa\11700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
