--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1283,6 +1283,9 @@
     <ClCompile Include="UVa\11700\11743.cpp">
       <Filter>UVa\11700</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10190.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
