--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1289,6 +1289,9 @@
     <ClCompile Include="UVa\500\544.cpp">
       <Filter>UVa\500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11800\11827.cpp">
+      <Filter>UVa\11800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
