--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1301,6 +1301,9 @@
     <ClCompile Include="UVa\13000\13025.cpp">
       <Filter>UVa\13000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\13000\13059.cpp">
+      <Filter>UVa\13000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
