--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1307,6 +1307,9 @@
     <ClCompile Include="UVa\13000\13018.cpp">
       <Filter>UVa\13000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11000\11057.cpp">
+      <Filter>UVa\11000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
