--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1325,6 +1325,9 @@
     <ClCompile Include="UVa\600\694.cpp">
       <Filter>UVa\600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\500\543.cpp">
+      <Filter>UVa\500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
