--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1328,6 +1328,9 @@
     <ClCompile Include="UVa\500\543.cpp">
       <Filter>UVa\500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\138.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
