--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1331,6 +1331,9 @@
     <ClCompile Include="UVa\100\138.cpp">
       <Filter>UVa\100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10200\10282.cpp">
+      <Filter>UVa\10200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
