--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1334,6 +1334,9 @@
     <ClCompile Include="UVa\10200\10282.cpp">
       <Filter>UVa\10200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11700\11777.cpp">
+      <Filter>UVa\11700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
