--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1337,6 +1337,9 @@
     <ClCompile Include="UVa\11700\11777.cpp">
       <Filter>UVa\11700</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\500\531.cpp">
+      <Filter>UVa\500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
