--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1340,6 +1340,9 @@
     <ClCompile Include="UVa\500\531.cpp">
       <Filter>UVa\500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\100\128.cpp">
+      <Filter>UVa\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
