--- a/Contest.vcxproj
+++ b/Contest.vcxproj
@@ -612,6 +612,10 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="UVa\10500\10523.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="UVa\10500\10530.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -1547,6 +1551,7 @@
     <None Include="UVa\10200\10220.py" />
     <None Include="UVa\10300\10334.py" />
     <None Include="UVa\10400\10494.py" />
+    <None Include="UVa\10500\10523.py" />
     <None Include="UVa\10500\10579.py" />
     <None Include="UVa\11800\11879.py" />
     <None Include="UVa\13200\13216.py" />
