--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1349,6 +1349,9 @@
     <ClCompile Include="UVa\10500\10523.cpp">
       <Filter>UVa\10500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\700\748.cpp">
+      <Filter>UVa\700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
@@ -1585,6 +1588,9 @@
     </None>
     <None Include="UVa\10500\10523.py">
       <Filter>UVa\10500</Filter>
+    </None>
+    <None Include="UVa\700\748.py">
+      <Filter>UVa\700</Filter>
     </None>
   </ItemGroup>
 </Project>
