--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1352,6 +1352,9 @@
     <ClCompile Include="UVa\700\748.cpp">
       <Filter>UVa\700</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\600\686.cpp">
+      <Filter>UVa\600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
