--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1355,6 +1355,9 @@
     <ClCompile Include="UVa\600\686.cpp">
       <Filter>UVa\600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\400\496.cpp">
+      <Filter>UVa\400\490</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
