--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1358,6 +1358,9 @@
     <ClCompile Include="UVa\400\496.cpp">
       <Filter>UVa\400\490</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11500\11559.cpp">
+      <Filter>UVa\11500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
