--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1364,6 +1364,9 @@
     <ClCompile Include="UVa\300\350.cpp">
       <Filter>UVa\300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11200\11286.cpp">
+      <Filter>UVa\11200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
