--- a/Contest.vcxproj
+++ b/Contest.vcxproj
@@ -472,6 +472,10 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10198.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="UVa\10200\10220.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -1587,6 +1591,7 @@
     <None Include="TopCoder\greed.conf" />
     <None Include="UVa\10100\10106.py" />
     <None Include="UVa\10100\10183.py" />
+    <None Include="UVa\10100\10198.py" />
     <None Include="UVa\10200\10220.py" />
     <None Include="UVa\10300\10334.py" />
     <None Include="UVa\10400\10494.py" />
