--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1382,6 +1382,9 @@
     <ClCompile Include="UVa\10100\10198.cpp">
       <Filter>UVa\10100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\200\260.cpp">
+      <Filter>UVa\200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
